<resources>
    <string name="app_name">Pizza time</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="veg_pizza">veg pizza</string>
    <string name="new_launches">New Launches</string>
    <string name="sides">Sides</string>
    <string name="beverages">Beverages</string>
    <string name="dessert">Dessert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="track_array">
        <item>Confirm Order</item>
        <item>Order in kitchen</item>
        <item>Packing pizza</item>
        <item>Out for delivery</item>
    </string-array>
</resources>